fix - Final esthetics fix

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-    <app-root></app-root>
+    <div style="background-color: #7e7ea211;">
+        <app-root></app-root>
+    </div>
 </body>
 
 </html>
